--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css">
-    <title>Bryan Guerrero Portfolio</title>
+    <title>Kay</title>
   </head>
   <body>
     <div class="bg-img">
